--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,4 +1,30 @@
 .container {
-  height: calc(100vh-100px);
+  width: auto;
+  height: calc(100vh - 100px);
   background-color: orangered;
+  overflow: hidden;
+}
+
+.arrowContainer {
+  position: absolute;
+  width: 10%;
+  height: 20%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.wrapper {
+  width: 200vw;
+  height: 100%;
+  display: flex;
+  transition: all 0.7s ease-in-out;
+}
+
+.imgContainer {
+  width: 100vw;
+  height: 100%;
+  position: relative;
 }
